fix spacing

--- a/src/components/contactUs/contactUs.css
+++ b/src/components/contactUs/contactUs.css
@@ -1,5 +1,6 @@
 .contact {
     background: #051522;
+    padding: 2rem 0;
 }
 
 .con-heading>h1 {
@@ -8,7 +9,7 @@
     font-size: 3rem;
     line-height: 5rem;
     font-family: 'Montserrat', sans-serif;
-    padding-top: 1rem;
+    margin-top: 1rem;
 }
 
 .lbl {
@@ -34,7 +35,7 @@
 }
 
 .con-left {
-    margin: 14px 0;
+    margin: 2rem 0 3rem 0;
     font-family: 'Roboto', sans-serif;
     color: #ffffff;
 }
@@ -80,7 +81,7 @@ textarea {
 
 input[type="submit"] {
     cursor: pointer;
-    color: rgba(7, 7, 7, 0.7);
+    color: #070707b3;
     line-height: 1em;
     padding: 10px 50px;
     border: 0;
@@ -108,8 +109,6 @@ input[type="submit"]:focus {
     text-shadow: none;
 }
 
-.mapouter {}
-
 .gmap_canvas {
     text-align: center;
     overflow: hidden;
@@ -118,7 +117,7 @@ input[type="submit"]:focus {
 
 .gmap_canvas>iframe {
     width: 39vw;
-    height: 50vh;
+    height: 55vh;
     overflow: hidden;
     margin: 0;
     border-radius: 10px;
